--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     "content_scripts": [
         {
             "matches": ["https://web.whatsapp.com/*"],
-            "js": ["waa.js"]
+            "js": ["waa.min.js"]
         }
     ]
 }
