--- a/manifest.json
+++ b/manifest.json
@@ -9,11 +9,8 @@
         "96": "icons/wa-web-96.png"
     },
 
-    "permissions": [
-        "webRequest",
-        "webRequestBlocking",
-        "https://web.whatsapp.com/*"
-    ],
+    "permissions": ["webRequest", "webRequestBlocking"],
+    "host_permissions": ["*://web.whatsapp.com/*"],
 
     "browser_specific_settings": {
         "gecko": {
@@ -30,7 +27,7 @@
 
     "content_scripts": [
         {
-            "matches": ["https://web.whatsapp.com/*"],
+            "matches": ["*://web.whatsapp.com/*"],
             "run_at": "document_end",
             "js": ["waa.js"]
         }
